# cpp

./: .gitignore  CMakeLists.txt  README.md
cpp11/: CMakeLists.txt  config.h.in
cpp11/include/utilities/: registrar.h  shared.h  utils.h
cpp11/include/utilities/classes/: carray.h  named.h  printer.h
cpp11/include/utilities/classes/interfaces/: data.h
cpp11/source/: driver.cpp  registrar.cpp  utils.cpp
cpp11/source/language/: alignas_alignof.cpp  attributes.cpp  auto.cpp  char32_t_and_char16_t.cpp  constexpr.cpp  converting_constructors.cpp  decltype_operator.cpp  default_functions.cpp  delegating_constructors.cpp  deleted_functions.cpp  explicit_conversion_functions.cpp  explicit_virtual_overrides.cpp  final_specifier.cpp  forwarding_references.cpp  initializer_lists.cpp  inline_namespaces.cpp  lambda_expressions.cpp  move_semantics.cpp  noexcept_specifier.cpp  non_static_data_member_initializers.cpp  nullptr.cpp  range_based_for_loops.cpp  raw_string_literals.cpp  ref_qualified_member_functions.cpp  right_angle_brackets.cpp  rvalue_references.cpp  sizeof_member_variables.cpp  special_member_functions_for_move_semantics.cpp  static_assert.cpp  strong_typed_enums.cpp  thread_local_storage.cpp  trailing_return_types.cpp  type_aliases.cpp  unrestricted_unions.cpp  user_defined_literals.cpp  variadic_templates.cpp
cpp11/source/language/classes/: converting_constructors.cpp  delegating_constructors.cpp  final_specifier.cpp  move_semantics.cpp  non_static_data_member_initializers.cpp  sizeof_member_variables.cpp
cpp11/source/language/functions/: lambda_expressions.cpp  noexcept_specifier.cpp  trailing_return_types.cpp
cpp11/source/language/literals/: raw_string_literals.cpp  user_defined_literals.cpp
cpp11/source/language/templates/: right_angle_brackets.cpp  variadic_templates.cpp
cpp11/source/language/types/: alignas_alignof.cpp  auto.cpp  constexpr.cpp  decltype_operator.cpp  initializer_lists.cpp  thread_local_storage.cpp
